force-app/main/default/objects/nimba_ZoomParticipant__c/nimba_ZoomParticipant__c.object-meta.xml
<CustomObject>
    <label>nimba_ZoomParticipant</label>
    <nameField>
        <label>nimba_ZoomParticipant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>nimba_ZoomParticipants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>