force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantEmail__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantEmail__c</fullName>
    <description>The participant&apos;s email address. This response only returns if the participant joined the meeting by logging into Zoom. If the participant is not part of the host&apos;s account, this returns an empty string value, with some exceptions. See Email address display rules for details.</description>
    <label>nimba_ZoomParticipantEmail</label>
    <type>Email</type>
</CustomField>