force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantEvent__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantEvent__c</fullName>
    <description>The name of the event.</description>
    <label>nimba_ZoomParticipantEvent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>