force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantJoinTime__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantJoinTime__c</fullName>
    <description>The time when the participant joined the meeting.</description>
    <inlineHelpText>The time when the participant joined the meeting.</inlineHelpText>
    <label>nimba_ZoomParticipantJoinTime</label>
    <type>DateTime</type>
</CustomField>