force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantLeaveReason__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantLeaveReason__c</fullName>
    <description>The reason why the participant left the meeting, where $name is the participant&apos;s</description>
    <label>nimba_ZoomParticipantLeaveReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>