force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantLeaveTime__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantLeaveTime__c</fullName>
    <description>The time when the participant left the meeting.</description>
    <label>nimba_ZoomParticipantLeaveTime</label>
    <type>DateTime</type>
</CustomField>