force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantMeetingDuration__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantMeetingDuration__c</fullName>
    <description>The scheduled meeting duration.</description>
    <label>nimba_ZoomParticipantMeetingDuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>