force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantMeetingId__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantMeetingId__c</fullName>
    <description>The meeting ID.</description>
    <label>nimba_ZoomParticipantMeetingId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>