force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantMeetingStartTime__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantMeetingStartTime__c</fullName>
    <description>The meeting&apos;s start time.</description>
    <label>nimba_ZoomParticipantMeetingStartTime</label>
    <type>DateTime</type>
</CustomField>