force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantMeetingTimeZone__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantMeetingTimeZone__c</fullName>
    <description>The meeting&apos;s timezone.</description>
    <label>nimba_ZoomParticipantMeetingTimeZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>