force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantMeetingTopic__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantMeetingTopic__c</fullName>
    <description>The meeting&apos;s topic.</description>
    <label>nimba_ZoomParticipantMeetingTopic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>