force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantMeetingType__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantMeetingType__c</fullName>
    <description>The meeting type
0 — A prescheduled meeting.
1 — An instant meeting.
2 — A scheduled meeting.
3 — A recurring meeting with no fixed time.
4 — A personal meeting room.
7 — A PAC (Personal Audio Conference) meeting.
8 — A recurring meeting with a fixed time.</description>
    <label>nimba_ZoomParticipantMeetingType</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>