force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantMeetingUUID__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantMeetingUUID__c</fullName>
    <description>The meeting&apos;s universally unique identifier (UUID). Each meeting instance generates a meeting UUID.</description>
    <externalId>true</externalId>
    <label>nimba_ZoomParticipantMeetingUUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>