force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantAddress__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantAddress__c</fullName>
    <description>The registrant&apos;s address.</description>
    <label>nimba_ZoomParticipantRegistrantAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>