force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantCity__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantCity__c</fullName>
    <label>nimba_ZoomParticipantRegistrantCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>