force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantCountry__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantCountry__c</fullName>
    <description>The registrant&apos;s two-letter country code.</description>
    <label>nimba_ZoomParticipantRegistrantCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>