force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantEmail__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantEmail__c</fullName>
    <description>The registrant&apos;s email address.</description>
    <label>nimba_ZoomParticipantRegistrantEmail</label>
    <type>Email</type>
</CustomField>