force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantFirstName__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantFirstName__c</fullName>
    <description>The registrant&apos;s first name.</description>
    <label>nimba_ZoomParticipantRegistrantFirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>