force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantId__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantId__c</fullName>
    <description>The registrant&apos;s ID.</description>
    <label>nimba_ZoomParticipantRegistrantId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>