force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantJobTitle__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantJobTitle__c</fullName>
    <description>The registrant&apos;s job title.</description>
    <label>nimba_ZoomParticipantRegistrantJobTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>