force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantLastName__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantLastName__c</fullName>
    <description>The registrant&apos;s last name.</description>
    <label>nimba_ZoomParticipantRegistrantLastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>