force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantPhone__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantPhone__c</fullName>
    <description>The registrant&apos;s phone number.</description>
    <label>nimba_ZoomParticipantRegistrantPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>