force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantState__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantState__c</fullName>
    <description>The registrant&apos;s state or province.</description>
    <label>nimba_ZoomParticipantRegistrantState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>