force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantStatus__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantStatus__c</fullName>
    <description>The registrant&apos;s registration approval status:

approve — Approved registrant.
pending — Registration approval pending.</description>
    <label>nimba_ZoomParticipantRegistrantStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>