force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantRegistrantZip__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantRegistrantZip__c</fullName>
    <description>The registrant&apos;s ZIP or postal code.</description>
    <label>nimba_ZoomParticipantRegistrantZip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>