force-app/main/default/objects/nimba_ZoomParticipant__c/fields/nimba_ZoomParticipantUserId__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomParticipantUserId__c</fullName>
    <description>The participant&apos;s meeting user ID. This value is assigned to a participant when they join a meeting and is only valid for the duration of the meeting.</description>
    <label>nimba_ZoomParticipantUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>